Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-18281

Welcome page and menu texts don't adapt to Breeze Dark

XMLWordPrintable

    • 89e959736 (master)

      QtC's default theme is Flat which partly adapts to Breeze Dark, the dark variant of the KDE Plasma desktop theme Breeze.

      While, e.g., the Options dialog is OK with Breeze Dark and QtC Flat, the Welcome page and menu texts don't adapt to Breeze Dark as can be seen in the attached screenshot. In the Welcome page, only "Recent Projects" and "Sessions" texts are unreadable.

      If QtC theme is changed to Flat Dark, menu and Welcome page texts become readable.

        For Gerrit Dashboard: QTCREATORBUG-18281
        # Subject Branch Project Status CR V

            con Eike Ziller
            ckakman Kayra Akman
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes